# hep_project_scaffold

./: .gitignore  CMakeLists.txt  README.md  runindocker.sh  runmain.sh
src/: CMakeLists.txt  main.cpp
